<resources>
    <string name="app_name">E-Wallet</string>
    <string name="text_image">Image</string>
    <string name="text_splash_title">The Most Trusted \nE-Wallet</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_total_balance">Total balance</string>
    <string name="text_total_value">$12000</string>
    <string name="text_income">Income:</string>
    <string name="text_expense">Expense:</string>
    <string name="text_expense_value">-100$</string>
    <string name="text_income_value">+200 $</string>
    <string name="text_exchange">Exchange</string>
    <string name="text_statistics_of_last_week">Statistics of last week</string>
    <string name="text_home">Home</string>
    <string name="text_add_btn">Add</string>
    <string name="text_wallet">Wallet</string>
    <string name="text_enter_a_title">Enter a title</string>
    <string name="text_enter_an_amount">Enter an amount</string>
    <string name="text_enter_a_type">Enter a type</string>
    <string name="text_enter_a_tag">Enter a tag</string>
    <string name="text_enter_a_date">Enter a date</string>
    <string name="text_enter_a_description">Enter a description</string>
    <string name="text_add_expense_income">Add expense/income</string>
    <string name="text_add">Add expense/income</string>
    <string name="text_exchange_converter">Exchange converter</string>
    <string name="united_states_dollar">United States Dollar</string>
    <string name="text_transactions">Transactions</string>
    <string name="text_recent_transactions">Recent transactions</string>
</resources>