<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_charcoal">

    <ImageView
        android:layout_width="343dp"
        android:layout_height="360dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:contentDescription="@string/text_image"
        android:src="@drawable/bg_blink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo_splash"
        android:layout_width="285dp"
        android:layout_height="285dp"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:contentDescription="@string/text_image"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center"
        android:text="@string/text_splash_title"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_splash" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="205dp"
        android:layout_height="62dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/blue_ribbon"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/text_get_started"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_splash" />
</androidx.constraintlayout.widget.ConstraintLayout>